@@ -1,0 +1,3 @@
+Site URL: https://hello.porn/
+Contact: webmaster@hello.porn
+DMCA: https://hello.porn/dmca/
