@@ -1,0 +1,3 @@
+Site URL: https://ok.porn/
+Contact: webmaster@ok.porn
+DMCA: https://ok.porn/dmca/
