@@ -1,0 +1,3 @@
+Site URL: https://www.pornhat.com/
+Contact: webmaster@pornhat.com
+DMCA: https://www.pornhat.com/dmca/
