@@ -1,2 +1,8 @@
 [B]Version 1.1.16[/B]
 pornhub - added filters
+pornhat - new site
+helloporn - new site
+okporn - new site
+okxxx - new site
+pornstarstube - new site
+maxporn - new site
